fix filter title and filter gap

--- a/style.css
+++ b/style.css
@@ -80,17 +80,16 @@ form {
   font-weight: bold;
 }
 .filtres {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   font-weight: bold;
-  gap: 10px;
+  gap: 20px;
   margin-top: 10px;
 }
 
 .title-filter{
-  display: flex;
-  align-items: center;
-  color: var(--black);
+  margin-right: 20px;
+  display: inline-block;
 }
 
 .minibox {
